add view for recipe

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,12 +11,10 @@
           <%# <%= link_to 'Home', public_recipes_path %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Food List</a>
-          <%# <%= link_to 'Food List', foods_path %>
+          <%= link_to 'Food List', foods_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" >My Recipes</a>
-           <%# <%= link_to 'My Recipes', recipes_path %>
+           <%= link_to 'My Recipes', recipes_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" >Shopping List</a>
