--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,12 +1,1 @@
-<div class="container">
-  <h1 class="inventory-heading">Add ingredient</h1>
-
-  <%= form_with model: @recipe_food, url: recipe_recipe_foods_path, local: true do |f| %>
-    <div class="d-flex">
-      <%= f.number_field :quantity, min: 0, class:"form-control w-50", placeholder: "Quantity", autofocus: true %>
-      <%# <%= f.select(:food_id, @food_list.each do {|food| [food.name, food.id]}) %>
-      <%# <%= f.hidden_field :recipe_id, value: @recipe.id %> %>
-      <%= f.submit 'Add ingredient', class:"btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+<%= render "form", recipe_food: @recipe_food, recipe: @recipe %>
