--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,5 @@
 
-<div class="my-5 container">
-<h1>My recipes</h1>
+<div class="container mb-4">
 <%= link_to 'Add new recipe', new_recipe_path, class:"btn btn-primary"%>
 </div>
 
