--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
            <%= link_to 'My Recipes', recipes_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" >Shopping List</a>
+          <%#= link_to 'Shopping List', shopping_list_index_path, class: "nav-link" %>
            <%# <%= link_to 'shopping List', shopping_list_path %>
         </li>
       </ul>
