--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,10 +1,10 @@
 <div class="container border mb-5">
 <div class="row p-3 align-items-center">
   <div class="col">
-    <p>
+    <h2>
     <%= recipe.name %>
-    </p>
-    <%= link_to 'remove', { action: :destroy, id: recipe.id }, method: :delete%>
+    </h2>
+    <%= link_to 'Remove', { action: :destroy, id: recipe.id }, method: :delete%>
   </div>
   <div class="col">
     <p>
