--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container border">
-    <h2>Add new food</h2>
+    <h2>Add food</h2>
     <%= form_with model: Food.new, class: "my-4" do |f| %>
         <div class="mb-3">
             <%= f.label :name, class: "form-label" %>
