--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="inventory-heading">Edit ingredient</h1>
+<h1 class="inventory-heading">Edit/change ingredient</h1>
 
 <%= form_with model: @recipe_food, url: recipe_recipe_food_path(@recipe_food.recipe_id, @recipe_food.id), local: true, method: :patch do |f| %>
   <div class="add_ingredient_form_element">
