--- a/app/views/public_recipes/_recipe.html.erb
+++ b/app/views/public_recipes/_recipe.html.erb
@@ -4,7 +4,7 @@
     <p>By: <%= recipe.user.name %></p>
   </div>
   <div class="col">
-      <p>Total food items:<%= recipe.recipe_foods.size%></p>
+      <p>Total item food:<%= recipe.recipe_foods.size%></p>
       <p>Total price:
       <% recipe.recipe_foods.each do |recipe_food| %>
       <% @price = 0%>
