--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<section class="container">
     <div class="m-4 f-right">
         <%= link_to "Add food", new_food_path , class:"btn btn-primary" %>
     </div>
@@ -25,6 +25,6 @@
         </tr>
     <% end %>
 </table>
-</div>
+</section>
 
 
