--- a/app/views/general_shopping_list/index.html.erb
+++ b/app/views/general_shopping_list/index.html.erb
@@ -1,4 +1,5 @@
 <h1 class="text-center">Shopping List</h1>
+<section>
 <div class="d-flex justify-content-between m-3 mx-auto w-75">
     <p>Amount of food items to buy: <%= @total_foods %></p>
     <p>Total value of food needed: $<%= @total_price %></p>
@@ -17,3 +18,4 @@
         </tr>
     <% end %>
 </table>
+</section>
