--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<section class="container">
   <h1>
   <%= @recipe.name %>
   </h1>
@@ -36,4 +36,4 @@
   </table>
 
 <%= link_to "New recipe food", new_recipe_recipe_food_path(@recipe.id) %>
-</div>
+</section>
