--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<section>
+<p>Hey <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Your account has been locked temporary due to an excessive multiple times of unsuccessful signin attempts.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Click the link below to unlock account:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+</section>
