--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<section>
+<h1>Sign up</h1>
 
 <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -27,3 +28,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</section>
