--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,23 +1,24 @@
-<div class="container border">
-    <h2>Add food</h2>
+<section class="container border">
+    <h1>Add food</h1>
+    <ul class="list-unstyled">
     <%= form_with model: Food.new, class: "my-4" do |f| %>
-        <div class="mb-3">
+        <li class="mb-3">
             <%= f.label :name, class: "form-label" %>
             <%= f.text_field :name, class: "form-control" %>
-        </div>
-        <div class="mb-3">
+        </li>
+        <li class="mb-3">
             <%= f.label :measurement_unit, class: "form-label" %>
             <%= f.text_field :measurement_unit, class: "form-control" %>
-        </div>
-        <div class="mb-3">
+        </li>
+        <li class="mb-3">
             <%= f.label :price, class: "form-label" %>
             <%= f.number_field :price, class: "form-control" %>
-        </div>
-        <div class="mb-3">
+        </li>
+        <li class="mb-3">
             <%= f.label :quantity, class: "form-label" %>
             <%= f.number_field :quantity, class: "form-control" %>
-        </div>
+        </li>
         <%= f.submit class: "btn btn-primary" %>
     <% end %>
-</div>
+</section>
 
