--- a/app/views/public_recipes/_recipe.html.erb
+++ b/app/views/public_recipes/_recipe.html.erb
@@ -1,4 +1,4 @@
-<div class="card p-3 row mb-3">
+<section class="card p-3 row mb-3">
   <div class="col">
     <h2><%= link_to recipe.name, recipe %></h2>
     <p>By: <%= recipe.user.name %></p>
@@ -13,4 +13,4 @@
       <%= @price %>
       <p>
   </div>
-</div>
+</section>
