--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
+<section class="container">
 <% @public_recipes.each do |recipe|%>
   <%= render  "/public_recipes/recipe", recipe: recipe %>
 <%end%>
-</div>
+</section>
