--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,4 +1,4 @@
-<div class="container border mb-5">
+<section class="container border mb-5">
 <div class="row p-3 align-items-center">
   <div class="col">
     <h2>
@@ -12,4 +12,4 @@
   </p>
   </div>
 </div>
-</div>
+</section>
